--- a/index.html
+++ b/index.html
@@ -48,8 +48,32 @@
                                 </div>
                             </div>
                         </div>
-                        <div id="blogTwo"></div>
-                        <div id="blogThree"></div>
+                        <div id="blogTwo">
+                            <img id="" src="images/wwworking.jpg" alt="working" />
+                            <div>
+                                <p id="">Phoenix Baker • 19 Jan 2025</p>
+                                <p id="">Migrating to Linear 101</p>
+                                <p id="">Linear helps streamline software projects, sprints, tasks, and bug tracking. Here’s how to get started.</p>
+                                <div id="">
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="blogThree">
+                            <img id="" src="images/wwworking.jpg" alt="working" />
+                            <div>
+                                <p id="">Phoenix Baker • 19 Jan 2025</p>
+                                <p id="">Migrating to Linear 101</p>
+                                <p id="">Linear helps streamline software projects, sprints, tasks, and bug tracking. Here’s how to get started.</p>
+                                <div id="">
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                </div>
+                            </div>
+                        </div>
                         <div id="blogFour"></div>
                         <div id="blogFive"></div>
                         <div id="blogOneSix"></div>
